--- a/pro-child05-module/web/index.html
+++ b/pro-child05-module/web/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>index</h1>
-	<a href="WEB-INF/templates/REST/RESTful-put.html"></a>
+	<a href="WEB-INF/templates/REST/RESTful-put.html">显示电影列表</a>
 </body>
 </html>
