--- a/pro-child05-module/web/ajax/experiment01.html
+++ b/pro-child05-module/web/ajax/experiment01.html
@@ -5,37 +5,83 @@
 	<title>Experiment01</title>
 </head>
 <body>
-<h1>Ajax Experiment01</h1>
-	<button id="btnSpan">点击</button>
-<script src="https://unpkg.com/vue@3/dist/vue.global.js" charset="UTF-8"></script>
-<script src="../script/axios.min.js" charset="UTF-8"></script>
-<script>
-    Vue.createApp({
-        "el":"#btnSpan",
-        "methods":{
-            "experimentOne":function () {
+	<h1>Ajax Experiment01</h1>
+	<form action="/ajax/experiment/Two">
+		<button id="btnSpan" type="submit">点击</button>
+	</form>
 
-                // 请求：发送普通请求参数
-                // 响应：普通文本
-                axios({
-                    "method":"post",
-                    "url":"/ajax/experiment/One",
-                    "params":{
-                        "userName":"tom",
-                        "password":"123456"
-                    }
-                }).then(
-                    function (response) {
+	<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	<script>
 
-                    // response接收服务器端返回的响应数据
-                    console.log(response);
-                }).catch(function (response) {
-                    console.log(response);
-                });
+	    // import axios from "axios";
 
-            }
-        }
-    });
-</script>
+	    new Vue({
+	        "el":"#btnSpan",
+	        "methods":{
+	            "experimentOne":function () {
+
+	                // 请求：发送普通请求参数
+	                // 响应：普通文本
+	                axios({
+	                    "method":"post",
+	                    "url":"ajax/experiment/One",
+	                    "params":{
+	                        "userName":"tom",
+	                        "password":"123456"
+	                    }
+	                }).then(function (response) {
+
+	                    // response接收服务器端返回的响应数据
+	                    console.log(response);
+	                }).catch(function (error) {
+	                    console.log(error);
+	                });
+
+	            },
+
+	            "experimentTow":function (){
+	                axios({
+		                "method": "post",
+		                "url": "ajax/experiment/Two",
+
+		                //
+		                "data": {
+		                    "stuId": 55,
+			                "stuName": "tom",
+                            "subjectList": [
+                                {
+                                    "subjectName": "java",
+                                    "subjectScore": 50.55
+                                },
+                                {
+                                    "subjectName": "php",
+                                    "subjectScore": 30.26
+                                }
+                            ],
+                            "teacherMap": {
+                                "one": {
+                                    "teacherName":"tom",
+                                    "teacherAge":23
+                                },
+                                "two": {
+                                    "teacherName":"jerry",
+                                    "teacherAge":31
+                                },
+                            },
+                            "school": {
+                                "schoolId": 23,
+                                "schoolName": "atguigu"
+                            }
+		                }
+	                }).then(function (response){
+	                    console.log(response);
+	                }).catch(function (error){
+	                    console.log(error);
+		            });
+	            }
+	        }
+	    });
+	</script>
 </body>
 </html>
